--- a/carbon_foot_print/src/main/resources/application.properties
+++ b/carbon_foot_print/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=carbon_foot_print
+# DATASOURCE (MYSQL)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/bdcruzroja?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Julian2k191002perla
+#JPA
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=false
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+# Table names physically
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+server.port=5000
