--- a/carbon_foot_print/src/main/resources/application.properties
+++ b/carbon_foot_print/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DATASOURCE (MYSQL)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/bdcruzroja?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/cruzRoja?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Julian2k191002perla
+spring.datasource.password=oracle
 #JPA
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.generate-ddl=false
