--- a/carbon_foot_print/src/main/resources/application.properties
+++ b/carbon_foot_print/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # DATASOURCE (MYSQL)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/cruzroja?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/bdcruzroja?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=oracle
+spring.datasource.password=Julian2k191002perla
 #JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=false
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
