--- a/carbon_foot_print/pom.xml
+++ b/carbon_foot_print/pom.xml
@@ -92,8 +92,11 @@
 			<version>0.11.2</version>
 			<scope>runtime</scope>
 		</dependency>
-		
-		
+		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    		<version>2.5.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
