--- a/carbon_foot_print/src/main/resources/application.properties
+++ b/carbon_foot_print/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/cruzroja?useSSL=false&serverTi
 spring.datasource.username=root
 spring.datasource.password=oracle
 #JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.generate-ddl=false
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
