--- a/carbon_foot_print/src/main/resources/application.properties
+++ b/carbon_foot_print/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cruzroja?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=oracle
+spring.datasource.password=sasa
 #JPA
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=false
